--- a/client/index.html
+++ b/client/index.html
@@ -1,11 +1,19 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Merriweather&family=Montaga&family=Roboto&display=swap" rel="stylesheet">    
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/public/images/logo.png"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Merriweather&family=Montaga&family=Roboto&display=swap"
+      rel="stylesheet"
+    />
     <title>Tailored Tails</title>
   </head>
   <body>
